hphp/test/zend/bad/ext/soap/tests/interop/Round4/GroupH/r4_groupH_simple_doclit_017w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round4_groupH_simple_doclit.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoMultipleFaults4(array("whichFault" => 3,
                                   "param1" => 162,
                                   "param2" => 1));
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round4_groupH_simple_doclit.inc");
echo "ok\n";
?>